# anki-manager

./: .env.template  .gitignore  cli.py  main.py  models.py  pyproject.toml
anki_client/: anki_connect_client.py  configuration.py  create_model.py  notes_generation.py
notes_archive/: cache  fallout.json
src/: configuration.py  models.py  utils.py
src/anki_client/: anki_connect_client.py  constants.py  create_model.py  notes_generation.py
src/cli/: add_note.py  add_word.py  main.py
src/database/: engine.py  init_db.py  models.py  pydantic_models.py  sa_models.py  session.py
src/database/repositories/: adjectives.py  adverbs.py  conjunctions.py  determiners.py  nouns.py  prepositions.py  pronouns.py  verbs.py
src/words_archive/: adjectives.py  adverbs.py  nouns.py  places.py  prepositions.py  pronouns.py  verbs.py  words_db.py  words_extractor.py
words_archive/: adjectives.py  adverbs.py  fallout.py  nouns.py  prepositions.py  pronouns.py  verbs.py  words_db.py  words_extractor.py
